Bug 498228 - "Profile item doesn't look selected anymore in the profile manager." r+sr=bzbarsky