layout/xul/base/src/nsListBoxBodyFrame.cpp
@@ -519,7 +519,6 @@ nsListBoxBodyFrame::EnsureIndexIsVisible(PRInt32 aRowIndex)
   if (mCurrentIndex <= aRowIndex && aRowIndex < bottomIndex)
     return NS_OK;
 
-  // Check to be sure we're not scrolling off the bottom of the tree
   PRInt32 delta;
 
   PRBool up = aRowIndex < mCurrentIndex;
@@ -528,6 +527,10 @@ nsListBoxBodyFrame::EnsureIndexIsVisible(PRInt32 aRowIndex)
     mCurrentIndex = aRowIndex;
   }
   else {
+    // Check to be sure we're not scrolling off the bottom of the tree
+    if (aRowIndex >= GetRowCount())
+      return NS_ERROR_ILLEGAL_VALUE;
+
     // Bring it just into view.
     delta = 1 + (aRowIndex-bottomIndex);
     mCurrentIndex += delta; 
@@ -894,9 +897,7 @@ nsListBoxBodyFrame::DoInternalPositionChanged(PRBool aUp, PRInt32 aDelta)
   if (aDelta == 0)
     return NS_OK;
 
-  nsAutoScriptBlocker scriptBlocker;
-
-  nsPresContext *presContext = PresContext();
+  nsRefPtr<nsPresContext> presContext(PresContext());
   nsBoxLayoutState state(presContext);
 
   // begin timing how long it takes to scroll a row
@@ -908,45 +909,52 @@ nsListBoxBodyFrame::DoInternalPositionChanged(PRBool aUp, PRInt32 aDelta)
     return NS_OK;
   }
 
-  PRInt32 visibleRows = 0;
-  if (mRowHeight)
-    visibleRows = GetAvailableHeight()/mRowHeight;
+  {
+    nsAutoScriptBlocker scriptBlocker;
+
+    PRInt32 visibleRows = 0;
+    if (mRowHeight)
+      visibleRows = GetAvailableHeight()/mRowHeight;
   
-  if (aDelta < visibleRows) {
-    PRInt32 loseRows = aDelta;
-    if (aUp) {
-      // scrolling up, destroy rows from the bottom downwards
-      ReverseDestroyRows(loseRows);
-      mRowsToPrepend += aDelta;
-      mLinkupFrame = nsnull;
+    if (aDelta < visibleRows) {
+      PRInt32 loseRows = aDelta;
+      if (aUp) {
+        // scrolling up, destroy rows from the bottom downwards
+        ReverseDestroyRows(loseRows);
+        mRowsToPrepend += aDelta;
+        mLinkupFrame = nsnull;
+      }
+      else {
+        // scrolling down, destroy rows from the top upwards
+        DestroyRows(loseRows);
+        mRowsToPrepend = 0;
+      }
     }
     else {
-      // scrolling down, destroy rows from the top upwards
-      DestroyRows(loseRows);
-      mRowsToPrepend = 0;
+      // We have scrolled so much that all of our current frames will
+      // go off screen, so blow them all away. Weeee!
+      nsIFrame *currBox = mFrames.FirstChild();
+      nsCSSFrameConstructor* fc = presContext->PresShell()->FrameConstructor();
+      fc->BeginUpdate();
+      while (currBox) {
+        nsIFrame *nextBox = currBox->GetNextSibling();
+        RemoveChildFrame(state, currBox);
+        currBox = nextBox;
+      }
+      fc->EndUpdate();
     }
-  }
-  else {
-    // We have scrolled so much that all of our current frames will
-    // go off screen, so blow them all away. Weeee!
-    nsIFrame *currBox = mFrames.FirstChild();
-    nsCSSFrameConstructor* fc = PresContext()->PresShell()->FrameConstructor();
-    fc->BeginUpdate();
-    while (currBox) {
-      nsIFrame *nextBox = currBox->GetNextSibling();
-      RemoveChildFrame(state, currBox);
-      currBox = nextBox;
-    }
-    fc->EndUpdate();
-  }
 
-  // clear frame markers so that CreateRows will re-create
-  mTopFrame = mBottomFrame = nsnull; 
+    // clear frame markers so that CreateRows will re-create
+    mTopFrame = mBottomFrame = nsnull; 
   
-  mYPosition = mCurrentIndex*mRowHeight;
-  mScrolling = PR_TRUE;
-  PresContext()->PresShell()->
-    FrameNeedsReflow(this, nsIPresShell::eResize, NS_FRAME_HAS_DIRTY_CHILDREN);
+    mYPosition = mCurrentIndex*mRowHeight;
+    mScrolling = PR_TRUE;
+    presContext->PresShell()->
+      FrameNeedsReflow(this, nsIPresShell::eResize, NS_FRAME_HAS_DIRTY_CHILDREN);
+  }
+  if (!weakThis.IsAlive()) {
+    return NS_OK;
+  }
   // Flush calls CreateRows
   // XXXbz there has to be a better way to do this than flushing!
   presContext->PresShell()->FlushPendingNotifications(Flush_Layout);
